--- a/style.css
+++ b/style.css
@@ -104,14 +104,17 @@
     top: 30%;
     left: 0;
 }
-form{
+
+form {
     margin-top: 0;
     margin-bottom: 0 !important;
 }
-form div label{
+
+form div label {
     margin-top: 20px;
 }
-form div:nth-child(1) label{
+
+form div:nth-child(1) label {
     margin-top: 0px;
 }
 
@@ -179,7 +182,7 @@ form .Remember {
     margin-top: 0;
 }
 
-.form-area li{
+.form-area li {
     list-style: none;
     margin-top: -30px;
 }
@@ -206,17 +209,22 @@ form .Remember {
 
 @media (max-width:768px) {
 
-    .form-area{
-    width: 100%;
-    padding: 20px;
+    .form-area {
+        width: 100%;
+        padding: 20px;
         background-color: whitesmoke;
     }
+
     .signInWith span {
         width: 30%;
         margin: 20px 0;
     }
 
     .form-area::after {
+        display: none;
+    }
+
+    .col-md-6 img {
         display: none;
     }
 }
@@ -234,15 +242,21 @@ form .Remember {
         display: flex;
         align-items: center;
     }
-    .signInWith h5{
+
+    .signInWith h5 {
         font-size: 15px;
         font-weight: 500;
     }
+
     .signInWith span i {
         height: 30px;
         width: 30px;
         font-size: 16px;
         margin: 0px 5px;
+    }
+
+    .form-area li {
+       font-size: 13px;
     }
 
 }
